fix: click on link on mobile

--- a/site/src/components/landing/deck/landing-deck.module.scss
+++ b/site/src/components/landing/deck/landing-deck.module.scss
@@ -34,6 +34,10 @@
 
   &:global(.mobile) {
     pointer-events: none;
+
+    a {
+      pointer-events: all;
+    }
   }
 
   @include deck.container;
